css/style.css
@font-face {
	font-family: 'Bebas Neue Bold';
	src: url('../fonts/BebasNeueBold/bebas_neue_bold.eot'); /* IE 9 Compatibility Mode */
	src: url('../fonts/BebasNeueBold/bebas_neue_bold.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
		url('../fonts/BebasNeueBold/bebas_neue_bold.woff2') format('woff2'), /* Super Modern Browsers */
		url('../fonts/BebasNeueBold/bebas_neue_bold.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
		url('../fonts/BebasNeueBold/bebas_neue_bold.ttf') format('truetype'), /* Safari, Android, iOS */
		url('../fonts/BebasNeueBold/bebas_neue_bold.svg#bebas_neue_bold') format('svg'); /* Chrome < 4, Legacy iOS */
}

@font-face {
	font-family: 'MyriadPro-Regular';
	src: url('../fonts/myriad/myriadpro-regular.eot'); /* IE 9 Compatibility Mode */
	src: url('../fonts/myriad/myriadpro-regular.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
		url('../fonts/myriad/myriadpro-regular.woff2') format('woff2'), /* Super Modern Browsers */
		url('../fonts/myriad/myriadpro-regular.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
		url('../fonts/myriad/myriadpro-regular.ttf') format('truetype'), /* Safari, Android, iOS */
		url('../fonts/myriad/myriadpro-regular.svg#myriadpro-regular') format('svg'); /* Chrome < 4, Legacy iOS */
}


html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}


body {
	margin: 0;
  padding: 0;
	font-family: "Montserrat", Arial, sans-serif;
	font-size: 13px;
	line-height: 24px;
	color: #8a8a8a;
	border-color: #ffffff;
}

a {
  text-decoration: none;
}

img {
  max-width: 100%;
  height: auto;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}



.cover-slide {
	background-image: url("../img/Layer 8.jpg");
	background-position: top center;
	background-repeat: no-repeat;
	background-color: #000000;
	color: #ffffff;
}

.container-center {
	width: 1800px;
	margin: 0 auto;
	padding: 0 16px;
}

.main-navigation {
	display: flex;
	flex-wrap: wrap;
	text-transform: uppercase;
	border-bottom: 1px solid #3a5e85;
}

.main-navigation a {
	color: #f5f5f5;
}

.menu-sandwich {
	display: block;
	width: 56px;
	padding-top: 23px;
	padding-bottom: 19px;
  border-right: 1px solid #3a5e85;
	}

.main-header-logo {
  width: 170px;
	/* text-align: center; */
	margin-left: 21px;
	padding-top: 2px;
	font-family: "Poppins", Arial, sans-serif;
	font-size: 33px;
	font-weight: 700;
	letter-spacing: -1.5px;
	line-height: 65px;
	border-right: 1px solid #3a5e85;
}

.site-navigation {
  display: flex;
	flex-wrap: wrap;
	width: 1087px;
	margin: 0;
	padding: 0;
	padding-top: 24px;
	padding-bottom: 23px;
	border-right: 1px solid #3a5e85;
	list-style: none;
	line-height: 25px;
}

.site-navigation li:first-child {
	margin-left: 40px;
}

.site-navigation li {
	margin-left: 36px;
}

.site-navigation a {
	/* color: #ffffff; */
	line-height: 25px;
}

 /* .wrapper-sandwich {

} */

.social-connection {
  display: flex;
	flex-wrap: wrap;
	margin: 0;
	padding: 0;
	width: 300px;
	border-right: 1px solid #3a5e85;
	list-style: none;
	}

	.social-connection li {
		margin-top: 24px;
		margin-left: 38px;
	}


.social-connection li:last-child {
	margin-top: 24px;
	margin-left: 33px;
}

.social-connection li:nth-child(2) {
	margin-left: 43px;
	margin-top: 26px;
}

.user-nav {
	display: flex;
	flex-wrap: nowrap;
	margin: 0;
	padding: 0;
	list-style-type: none;
}

.user-nav li:first-child {
width: 57px;
	 margin-left: 17px;
	padding-top: 23px;
	border-right: 1px solid #3a5e85;
}

.user-nav li:last-child {
	padding-top: 23px;
	margin-left: 20px;
}

.presentation {
	width: 630px;
  margin-left: 272px;
	padding-bottom: 134px;
  text-transform: uppercase;
}

.title-nike-name {
	margin-top: 163px;
	font-family: "Poppins", Arial, sans-serif;
	font-size: 203px;
	font-weight: 700;
	line-height: 147px;
	text-align: center;
	letter-spacing: -16px;
}

.slogan {
	margin-top: -178px;
	margin-bottom: 53px;;
	margin-left: 45px;
	font-size: 21px;
	font-weight: 700;
	line-height: 29px;
	letter-spacing: 7px;
}

.order-button {
	display: block;
	margin-left: 242px;
	margin-bottom: 80px;
	padding-top: 15px;
	padding-bottom: 12px;
	width: 160px;
	border-radius: 23px;
	font-size: 17px;
	line-height: 21px;
	color: #ffffff;
	background-color: #3954d9;
	text-align: center;
	cursor: pointer;
}

/* .main-navigation {
    font-family: "Bebas Neue Bold", Arial, sans-serif;

}

.test{
  background-color: rgb(255, 255, 255);
  box-shadow: 0px 5px 6px 0px rgba(34, 30, 31, 0.41);
  position: absolute;
  left: 150px;
  top: 827px;
  width: 1500px;
  height: 3583px;
  z-index: 15;
}

.main-footer {
	width: 1800px;
	height: 777px;
	background-image: url();
	background-repeat: repeat;
}

.Rectangle_9 {
  background-color: rgb(33, 33, 33);
  opacity: 0.749;
  position: absolute;
  left: 0px;
  top: -2px;
  width: 1832px;
  height: 76px;
  z-index: 246;
} */

